--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>emoji</title>
 </head>
 <body>
-    
+    <p style="text-align: center;">
+        <span id="emojis" class="flex" style="font-size: 5rem;">&#128512;</span>
+        <br>
+    </p>
+
 </body>
 </html>
