--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <p style="text-align: center;">
-        <span id="emojis" class="flex" style="font-size: 5rem;">&#128512;</span>
+        <span id="emojis" class="flex" style="font-size: 5rem;">&#128513;</span>
         <br>
     </p>
-
+    <script src="main.js"></script>
 </body>
 </html>
