--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>emoji</title>
 </head>
 <body>
-    <p style="text-align: center;">
-        <span id="emojis" class="flex" style="font-size: 5rem;">&#128513;</span>
-        <br>
-    </p>
+    <div id="emojis"></div>
+    
     <script src="main.js"></script>
 </body>
 </html>
